--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -52,10 +52,152 @@
       Helvetica Neue,
       sans-serif;
   }
+
+  :root {
+    --color-skin-000: 0, 0, 0;
+    /* #000000 black */
+    --color-skin-001: 34, 21, 51;
+    /* #221533 black-80 */
+    --color-skin-002: 46, 29, 69;
+    /* #2E1D45 black-70 */
+    --color-skin-003: 97, 80, 120;
+    /* #615078 black-60 */
+    --color-skin-004: 34, 21, 51;
+    /* #221533 black-fixed */
+
+    --color-skin-100: 230, 231, 255;
+    /* #E6E7FF iris-40 */
+    --color-skin-101: 241, 241, 255;
+    /* #F1F1FF iris-20 */
+    --color-skin-102: 248, 248, 255;
+    /* #F8F8FF blue-bg-80 */
+
+    --color-skin-200: 134, 128, 152;
+    /* #868098 gray-100 */
+    --color-skin-201: 183, 183, 215;
+    /* #B7B7D7 gray-60 */
+    --color-skin-202: 204, 204, 213;
+    /* #CCCCD5 gray-40 */
+    --color-skin-203: 242, 241, 245;
+    /* #F2F1F5 gray-20 */
+    --color-skin-204: 252, 251, 254;
+    /* #FCFBFE gray-10 */
+
+    --color-skin-300: 255, 255, 255;
+    /* #FFFFFF white */
+    --color-skin-301: 253, 253, 255;
+    /* #FDFDFF white-80*/
+    --color-skin-302: 255, 255, 255;
+    /* #FFFFFF white-fixed*/
+
+    --color-pink-100: 239, 93, 168;
+    /* #EF5DA8*/
+    --color-pink-80: 241, 120, 182;
+    /* #F178B6*/
+    --color-pink-60: 255, 240, 247;
+    /* #FFF0F7*/
+
+    --color-iris-100: 93, 95, 239;
+    /* #5D5FEF*/
+    --color-iris-80: 120, 121, 241;
+    /* #7879F1*/
+    --color-iris-60: 165, 166, 246;
+    /* #A5A6F6*/
+
+    --color-green-100: 4, 183, 147;
+    /* #04B793*/
+    --color-green-80: 5, 201, 161;
+    /* #05C9A1*/
+    --color-green-20: 230, 250, 246;
+    /* #E6FAF6*/
+    --color-green-10: 242, 252, 250;
+    /* #F2FCFA*/
+
+    --color-red-100: 223, 2, 82;
+    /* #DF0252*/
+    --color-red-80: 255, 0, 92;
+    /* #FF005C*/
+
+    --color-yellow-100: 235, 170, 42;
+    /* #EBAA2A*/
+    --color-yellow-80: 255, 192, 29;
+    /* #FFC01D*/
+    --color-yellow-10: 255, 249, 232;
+    /* #FFF9E8*/
+
+    --color-gray-100: 134, 128, 152;
+    /* #868098 gray-100 */
+    --color-gray-60: 183, 183, 215;
+    /* #B7B7D7 gray-60 */
+    --color-gray-40: 204, 204, 213;
+    /* #CCCCD5 gray-40 */
+    --color-gray-20: 242, 241, 245;
+    /* #F2F1F5 gray-20 */
+    --color-gray-10: 252, 251, 254;
+    /* #FCFBFE gray-10 */
+
+    --color-text-base: 34, 21, 51;
+    /* #221533 text-black-80 */
+    --color-text-alt: 97, 80, 120;
+    /* #615078 text-black-60 */
+    --color-text-muted: 183, 183, 215;
+    /* #B7B7D7 text-gray-60 */
+    --color-text-inverted: 255, 255, 255;
+    /* #FFFFFF text-white-100 */
+
+    --color-bg-base: 248, 248, 255;
+    /* #F8F8FF blue-bg-80 */
+    --color-bg-alt: 241, 241, 255;
+    /* #F1F1FF bg-iris-20 */
+    --color-bg-card: 255, 255, 255;
+    /* #FFFFFF  */
+    --color-bg-muted: 242, 241, 245;
+    /* #F2F1F5 bg-gray-20 */
+    --color-bg-base-inverted: 34, 21, 51;
+    /* #221533 text-black-80 */
+    --color-bg-card-inverted: 253, 253, 255;
+    /* #FDFDFF bg-white-80 */
+    --color-bg-success: 242, 252, 250;
+    /* #F2FCFA bg-green-10 */
+    --color-bg-hotkey: 46, 29, 69;
+    /* #2E1D45 bg-black-70 */
+    --color-bg-countdown: 0, 0, 0;
+    /* #000000 bg-black */
+
+    --color-shadow-base: 241, 241, 255;
+    /* #F1F1FF shadow-skin-base */
+    --color-shadow-alt: 234, 234, 253;
+    /* #EAEAFD shadow-iris-25 */
+
+    --color-border-base: 242, 241, 245;
+    /* #F2F1F5 gray-20 */
+    --color-border-alt: 241, 241, 255;
+    /* #F1F1FF blue-bg-80 */
+  }
 }
 
 .body {
   background-color: #0b0d14;
   color: #ffffff;
   font-size: 12px;
+}
+
+/* Virtual List */
+.vlist {
+  scrollbar-width: thin;
+  scrollbar-color: rgb(var(--color-gray-20)) transparent;
+}
+
+.vlist::-webkit-scrollbar {
+  width: 10px;
+}
+
+.vlist::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+.vlist::-webkit-scrollbar-thumb {
+  width: 10px;
+  background-color: rgb(var(--color-gray-20));
+  border-radius: 9999px;
 }
