add static tokens

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -172,6 +172,9 @@
     /* #35344A */
     --color-border-alt: 25, 24, 36;
     /* #191824 */
+
+    --color-iris-100: 93, 95, 239;
+    /* #5D5FEF */
   }
 
   .dark {
