--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -309,21 +309,21 @@
   font-size: 12px;
 }
 
-/* Virtual List */
-.vlist {
+/* Scroll Container */
+.scroll-container {
   scrollbar-width: thin;
   scrollbar-color: rgb(var(--color-gray-20)) transparent;
 }
 
-.vlist::-webkit-scrollbar {
+.scroll-container::-webkit-scrollbar {
   width: 10px;
 }
 
-.vlist::-webkit-scrollbar-track {
+.scroll-container::-webkit-scrollbar-track {
   background-color: transparent;
 }
 
-.vlist::-webkit-scrollbar-thumb {
+.scroll-container::-webkit-scrollbar-thumb {
   width: 10px;
   background-color: rgb(var(--color-gray-20));
   border-radius: 9999px;
